# pytest-do-not-mock

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
src/pytest_do_not_mock/: __init__.py  contract.py  decorator.py  errors.py  guards.py  plugin.py  protected.py
tests/: conftest.py  test_alias_protection.py  test_block_all.py  test_do_not_mock.py  test_plugin.py  test_resolve.py  test_scopes.py  test_targeted.py
