[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-do-not-mock"
version = "0.1.0"
description = "A pytest plugin that prevents mocking of specific classes and functions"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Alejandro Perez", email = "alejandro.perez.gancedo@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest >= 7.0",
]

[project.entry-points.pytest11]
do_not_mock = "pytest_do_not_mock.plugin"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
