[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-do-not-mock"
description = "Pytest plugin to prevent mocking of critical functions in tests"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alejandro Perez", email = "alejandro.perez.gancedo@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["pytest", "plugin", "mock", "testing", "quality", "no-mock"]
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tox>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pyright>=1.1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/LifeLex/pytest-do-not-mock"
Repository = "https://github.com/LifeLex/pytest-do-not-mock"
Documentation = "https://github.com/LifeLex/pytest-do-not-mock#readme"
Changelog = "https://github.com/LifeLex/pytest-do-not-mock/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/LifeLex/pytest-do-not-mock/issues"

[project.entry-points.pytest11]
do_not_mock = "pytest_do_not_mock.plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/pytest_do_not_mock/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
source = ["pytest_do_not_mock"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true
exclude = ["src/pytest_do_not_mock/_version.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["pytest_do_not_mock"]
force-single-line = false
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
